PADnoteParameter fix for QtCreator

Make PADnoteParameters usable with QtCreator again. Necessary due to
QTCREATORBUG-23722 (no capturing of VLAs in lambdas).